--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ title: Zimin Cai (蔡紫旻) - 知与行
 
   <h1>wiki</h1>
   <ul class="posts">
+    <li><span>12 Mar 2012</span> &raquo; <a href="https://github.com/caizimin/caizimin.github.com/wiki">Wiki On Github</a></li>
   </ul>
 
   <h1>prominent open source projects</h1>
